--- a/project-root/src/Jenkinsfile
+++ b/project-root/src/Jenkinsfile
@@ -3,6 +3,8 @@ pipeline {
 
     environment {
         DOCKER_HUB_CREDENTIALS = credentials('docker-hub')  // Add in Jenkins > Credentials
+        DOCKER_IMAGE = 'sanju716/myapp:latest'
+        EC2_PUBLIC_IP = '3.111.41.28'  // Replace with actual EC2 public IP or use Jenkins environment variable
     }
 
     stages {
@@ -20,7 +22,7 @@ pipeline {
 
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t sanju716/myapp:latest .'
+                sh 'docker build -t $DOCKER_IMAGE .'
             }
         }
 
@@ -29,7 +31,7 @@ pipeline {
                 withCredentials([usernamePassword(credentialsId: 'docker-hub', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
                     sh '''
                         echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-                        docker push sanju716/myapp:latest
+                        docker push $DOCKER_IMAGE
                     '''
                 }
             }
@@ -39,11 +41,14 @@ pipeline {
             steps {
                 sshagent(['ec2-key']) {
                     sh '''
-                        ssh -o StrictHostKeyChecking=no ubuntu@<ec2-public-ip> '
-                        docker pull sanju716/myapp:latest &&
+                        ssh -o StrictHostKeyChecking=no ubuntu@$EC2_PUBLIC_IP '
+                        # Pull the latest Docker image
+                        docker pull $DOCKER_IMAGE &&
+                        # Stop and remove the previous container if it exists
                         docker stop myapp || true &&
                         docker rm myapp || true &&
-                        docker run -d -p 80:8080 --name myapp sanju716/myapp:latest'
+                        # Run the new container
+                        docker run -d -p 80:8080 --name myapp $DOCKER_IMAGE'
                     '''
                 }
             }
